--- a/internship/2020_src/HTML_CSS/css/.project
+++ b/internship/2020_src/HTML_CSS/css/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>HTML_CSS</name>
+	<name>css</name>
 	<comment></comment>
 	<projects>
 	</projects>
